objects/vtse__Stand_Deliver_Reviewer_Sharing__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Media_Sharing_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Sharing Rule</label>
        <referenceTo>scormanywhere__Media_Sharing_Rule__c</referenceTo>
        <relationshipLabel>Stand and Deliver Reviewer</relationshipLabel>
        <relationshipName>Stand_Deliver_Reviewer_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Static</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Relative_Reviewer__c</fullName>
        <label>Relative Reviewer Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>Role Hierarchy Manager</fullName>
                    <label>Role Hierarchy Manager(s)</label>
                </value>
                <value>
                    <fullName>Direct Reports Role Hierarchy</fullName>
                    <label>Direct Reports (Role Hierarchy)</label>
                </value>
                <value>
                    <fullName>Direct Reports Manager Field</fullName>
                    <label>Direct Reports (Manager Field)</label>
                </value>
                <value>
                    <fullName>Peers Role Hierarchy</fullName>
                    <label>Peers (Role Hierarchy)</label>
                </value>
                <value>
                    <fullName>Peers Role-Based</fullName>
                    <label>Peers (Role-Based)</label>
                </value>
                <value>
                    <fullName>Peers Same Manager</fullName>
                    <label>Peers (Same Manager)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Stand_Deliver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand and Deliver</label>
        <referenceTo>vtse__Stand_Deliver__c</referenceTo>
        <relationshipLabel>Stand and Deliver Reviewer</relationshipLabel>
        <relationshipName>Stand_Deliver_Reviewer_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stand and Deliver Reviewer</label>
    <nameField>
        <displayFormat>SDRC-{0}</displayFormat>
        <label>Stand and Deliver Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stand and Deliver Reviewers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>